--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,71 @@
-.room {
-    color: #e7505a;
-    text-transform: uppercase;
-    font-size: 20px;
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+
 }
 
-.col-md-8 {
-    color: #3598dc;
+/* header */
+.flex {
+    display: flex;
 }
 
-body {
-    font-family: Quicksand, sans-serif;
+.block {
+    display: block;
+}
+
+.right {
+    justify-content: flex-end;
+}
+
+.container {
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 1.25rem;
+    padding-right: 1.25rem;
+}
+
+.items-center {
+    align-items: center;
+}
+
+.px-2\.5 {
+    padding-left: 0.625rem;
+    padding-right: 0.25rem;
+}
+
+.relative {
+    position: relative;
+}
+
+.cursor-pointer {
+    cursor: pointer;
+}
+
+.cursor-pointer:hover {
+    color: #f89520;
+    text-decoration: dashed;
+}
+
+.menu-nav .menu-link {
+    display: block;
+    padding: 1rem 1.25rem;
+}
+
+.menu-item {
+    display: block;
+}
+
+.justify-between {
+    justify-content: space-between;
+}
+
+.justify-center {
+    justify-content: center;
+}
+
+.text {
+    font-size: 1.5rem;
+    line-height: 2rem;
 }
